--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "cost_estimation",
     "version": "1.0.0",
-    "description": "Calcule the total cost of move, apply discounts and tax by state and type of estmiation, regulate or premium.",
+    "description": "Calcule the total cost of move, apply discounts and tax by state and type of estmiation, normal or premium.",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon src/server.ts",
-        "build": "rm -rf build/ && prettier --write source/ && tsc",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon src/index.ts",
+        "build": "rm -rf build/ && prettier --write src/ && tsc",
+        "test": "jest --coverage",
+        "lint": "eslint . --ext .ts --max-warnings=0"
     },
     "author": "Jesus Esparza",
     "license": "ISC",
@@ -15,10 +16,22 @@
         "@types/morgan": "^1.9.4",
         "express": "^4.18.2",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.20",
         "reflect-metadata": "^0.1.13",
         "ts-node": "^10.9.1",
-        "typedi": "^0.10.0",
+        "typedi": "^0.10.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.4.0",
+        "@typescript-eslint/eslint-plugin": "^5.53.0",
+        "eslint": "^8.34.0",
+        "eslint-config-standard-with-typescript": "^34.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "jest": "^29.4.3",
+        "nodemon": "^2.0.20",
+        "prettier": "^2.8.4",
+        "ts-jest": "^29.0.5",
         "typescript": "^4.9.5"
     }
 }
