--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
     "name": "cost_estimation",
     "version": "1.0.0",
     "description": "Calcule the total cost of move, apply discounts and tax by state and type of estmiation, normal or premium.",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
         "dev": "nodemon src/index.ts",
         "build": "rm -rf build/ && prettier --write src/ && tsc",
         "test": "jest --coverage",
-        "lint": "eslint . --ext .ts --max-warnings=0"
+        "lint": "eslint . --ext .ts --max-warnings=0",
+        "schema": "node schema-generator.js"
     },
     "author": "Jesus Esparza",
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
+        "ajv": "^8.12.0",
+        "ajv-errors": "^3.0.0",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-query-parser": "^1.3.3",
         "morgan": "^1.10.0",
         "reflect-metadata": "^0.1.13",
         "ts-node": "^10.9.1",
