includes some config changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,14 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "outDir": "./build",
-        "rootDir": "./src",
+        "rootDir": "./",
         "target": "es6",
         "skipLibCheck": true,
         "strict": true,
         "emitDecoratorMetadata":true,
         "experimentalDecorators": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+    ]
 }
