--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-    "name": "cost_estimation",
+    "name": "move_estimation_service",
     "version": "1.0.0",
     "description": "Calcule the total cost of move, apply discounts and tax by state and type of estmiation, normal or premium.",
     "main": "index.ts",
     "scripts": {
-        "dev": "nodemon src/index.ts",
+        "start": "nodemon src/index.ts",
         "test": "jest --coverage",
-        "lint": "eslint . --ext .ts --max-warnings=0",
-        "schema": "node schema-generator.js"
+        "lint": "eslint . --ext .ts --max-warnings=0"
     },
-    "author": "Jesus Esparza",
+    "author": "J.E.",
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.17",
@@ -34,7 +33,6 @@
         "eslint-plugin-promise": "^6.1.1",
         "jest": "^29.4.3",
         "nodemon": "^2.0.20",
-        "prettier": "^2.8.4",
         "ts-jest": "^29.0.5",
         "typescript": "^4.9.5"
     }
