--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "@types/jest": "^29.4.0",
+        "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.53.0",
         "eslint": "^8.34.0",
         "eslint-config-standard-with-typescript": "^34.0.0",
@@ -33,6 +34,7 @@
         "eslint-plugin-promise": "^6.1.1",
         "jest": "^29.4.3",
         "nodemon": "^2.0.20",
+        "supertest": "^6.3.3",
         "ts-jest": "^29.0.5",
         "typescript": "^4.9.5"
     }
